<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mood_chart"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/mood_chart"
        android:contentDescription="@string/mood_pie_chart_icon"
        app:showAsAction="always" />

</menu>
