<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen">

    <ImageView
        android:contentDescription="@string/smiley_face"
        android:id="@+id/smiley_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/ic_smiley_happy" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:clickable="false">

        <ImageButton
            android:contentDescription="@string/mood_log_icon"
            android:id="@+id/mood_log"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_note_add_black_50dp" />

        <ImageButton
            android:contentDescription="@string/mood_chart_icon"
            android:id="@+id/mood_chart"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@null"
            app:srcCompat="@drawable/ic_restore_black_50dp" />
    </RelativeLayout>

</RelativeLayout>